--- a/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_EventHandlerWarnings_GeneratedConsumerInterface.g.ts.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_EventHandlerWarnings_GeneratedConsumerInterface.g.ts.cmp
@@ -10,15 +10,9 @@ let DESTINATION_INSTANCE_NAME: string = "server";
 let POST_TIMEOUT_IN_MS: number = 8000; // -1 = Infinite
 
 /** *Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start().* */
-export function unused_PostFork(callContextData: any): void
+export function unused_Post(callContextData: any): void
 {
     IC.postFork(DESTINATION_INSTANCE_NAME, "unused", 1, POST_TIMEOUT_IN_MS, callContextData);
-}
-
-/** *Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start().* */
-export function unused_PostImpulse(callContextData: any): void
-{
-    IC.postImpulse(DESTINATION_INSTANCE_NAME, "unused", 1, POST_TIMEOUT_IN_MS, callContextData);
 }
 
 /**
