--- a/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_EventHandlers_GeneratedConsumerInterface.g.ts.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_EventHandlers_GeneratedConsumerInterface.g.ts.cmp
@@ -16,19 +16,9 @@ export namespace Test
      * 
      * Fake Event Handler due to case in the name so this will be generated
      */
-    export function onbecomingprimary_PostFork(callContextData: any): void
+    export function onbecomingprimary_Post(callContextData: any): void
     {
         IC.postFork(DESTINATION_INSTANCE_NAME, "onbecomingprimary", 1, POST_TIMEOUT_IN_MS, callContextData);
-    }
-
-    /**
-     * *Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start().*
-     * 
-     * Fake Event Handler due to case in the name so this will be generated
-     */
-    export function onbecomingprimary_PostImpulse(callContextData: any): void
-    {
-        IC.postImpulse(DESTINATION_INSTANCE_NAME, "onbecomingprimary", 1, POST_TIMEOUT_IN_MS, callContextData);
     }
 }
 
