Updated some tests and corresponding cmp files to match the PTI changes .

--- a/AmbrosiaTest/AmbrosiaTest/Cmp/migrateclient_Server.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/migrateclient_Server.cmp
@@ -3,26 +3,13 @@
 *X* At checkpoint, received 0 messages
 *X* At checkpoint, received 0 messages
 *X* becoming primary
-*X* Press enter to terminate program.
 *X* Server in Entry Point
-*X* At checkpoint, received 15327 messages
-*X* At checkpoint, received 15327 messages
-*X* I'm healthy after 3000 checks at time:10/20/2020 1:33:14 PM
-Received 1024 MB so far
-Unable to read data from the transport connection: An existing connection was forcibly closed by the remote host.
-   at System.Net.Sockets.NetworkStream.EndRead(IAsyncResult asyncResult)
-   at System.Threading.Tasks.TaskFactory`1.FromAsyncTrimPromise`1.Complete(TInstance thisRef, Func`3 endMethod, IAsyncResult asyncResult, Boolean requiresSynchronization)
+Unable to read data from the transport connection: An existing connection was forcibly closed by the remote host..
+   at System.Net.Sockets.Socket.AwaitableSocketAsyncEventArgs.ThrowException(SocketError error, CancellationToken cancellationToken)
+   at System.Net.Sockets.Socket.AwaitableSocketAsyncEventArgs.GetResult(Int16 token)
+   at System.Threading.Tasks.ValueTask`1.ValueTaskSourceAsTask.<>c.<.cctor>b__4_0(Object state)
 --- End of stack trace from previous location where exception was thrown ---
-   at System.Runtime.ExceptionServices.ExceptionDispatchInfo.Throw()
-   at Ambrosia.StreamCommunicator.<ReadAllRequiredBytesAsync>d__26.MoveNext()
---- End of stack trace from previous location where exception was thrown ---
-   at System.Runtime.ExceptionServices.ExceptionDispatchInfo.Throw()
-   at System.Runtime.CompilerServices.TaskAwaiter.HandleNonSuccessAndDebuggerNotification(Task task)
-   at Ambrosia.StreamCommunicator.<ReadIntFixedAsync>d__5.MoveNext()
---- End of stack trace from previous location where exception was thrown ---
-   at System.Runtime.ExceptionServices.ExceptionDispatchInfo.Throw()
-   at Ambrosia.Immortal.<Dispatch>d__34.MoveNext()
---- End of stack trace from previous location where exception was thrown ---
-   at System.Runtime.ExceptionServices.ExceptionDispatchInfo.Throw()
-   at System.Runtime.CompilerServices.TaskAwaiter.HandleNonSuccessAndDebuggerNotification(Task task)
+   at Ambrosia.StreamCommunicator.ReadAllRequiredBytesAsync(Stream stream, Byte[] buffer, Int32 offset, Int32 count, CancellationToken ct)
+   at Ambrosia.StreamCommunicator.ReadIntFixedAsync(Stream stream, CancellationToken ct)
+   at Ambrosia.Immortal.Dispatch(Int32 bytesToRead)
    at Ambrosia.Immortal.<>c__DisplayClass33_0.<<DispatchWrapper>b__0>d.MoveNext()
