--- a/AmbrosiaTest/AmbrosiaTest/Cmp/migrateclient_ClientJob.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/migrateclient_ClientJob.cmp
@@ -1,20 +1,12 @@
 *X* Trying to connect IC and Language Binding
 *X* Trying to do second connection between IC and Language Binding
 Bytes per RPC	Throughput (GB/sec)
-Unable to read data from the transport connection: An existing connection was forcibly closed by the remote host.
-   at System.Net.Sockets.NetworkStream.EndRead(IAsyncResult asyncResult)
-   at System.Threading.Tasks.TaskFactory`1.FromAsyncTrimPromise`1.Complete(TInstance thisRef, Func`3 endMethod, IAsyncResult asyncResult, Boolean requiresSynchronization)
+Unable to read data from the transport connection: An existing connection was forcibly closed by the remote host..
+   at System.Net.Sockets.Socket.AwaitableSocketAsyncEventArgs.ThrowException(SocketError error, CancellationToken cancellationToken)
+   at System.Net.Sockets.Socket.AwaitableSocketAsyncEventArgs.GetResult(Int16 token)
+   at System.Threading.Tasks.ValueTask`1.ValueTaskSourceAsTask.<>c.<.cctor>b__4_0(Object state)
 --- End of stack trace from previous location where exception was thrown ---
-   at System.Runtime.ExceptionServices.ExceptionDispatchInfo.Throw()
-   at Ambrosia.StreamCommunicator.<ReadAllRequiredBytesAsync>d__26.MoveNext()
---- End of stack trace from previous location where exception was thrown ---
-   at System.Runtime.ExceptionServices.ExceptionDispatchInfo.Throw()
-   at System.Runtime.CompilerServices.TaskAwaiter.HandleNonSuccessAndDebuggerNotification(Task task)
-   at Ambrosia.StreamCommunicator.<ReadIntFixedAsync>d__5.MoveNext()
---- End of stack trace from previous location where exception was thrown ---
-   at System.Runtime.ExceptionServices.ExceptionDispatchInfo.Throw()
-   at Ambrosia.Immortal.<Dispatch>d__34.MoveNext()
---- End of stack trace from previous location where exception was thrown ---
-   at System.Runtime.ExceptionServices.ExceptionDispatchInfo.Throw()
-   at System.Runtime.CompilerServices.TaskAwaiter.HandleNonSuccessAndDebuggerNotification(Task task)
+   at Ambrosia.StreamCommunicator.ReadAllRequiredBytesAsync(Stream stream, Byte[] buffer, Int32 offset, Int32 count, CancellationToken ct)
+   at Ambrosia.StreamCommunicator.ReadIntFixedAsync(Stream stream, CancellationToken ct)
+   at Ambrosia.Immortal.Dispatch(Int32 bytesToRead)
    at Ambrosia.Immortal.<>c__DisplayClass33_0.<<DispatchWrapper>b__0>d.MoveNext()
