--- a/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_EventHandlerWarnings_GeneratedConsumerInterface.g.ts.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_EventHandlerWarnings_GeneratedConsumerInterface.g.ts.cmp
@@ -9,10 +9,17 @@ import Utils = Ambrosia.Utils;
 let DESTINATION_INSTANCE_NAME: string = "server";
 let POST_TIMEOUT_IN_MS: number = 8000; // -1 = Infinite
 
-/** *Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start().* */
-export function unused_Post(callContextData: any): void
+/** *Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start(). Returns the post method callID.* */
+export function unused_Post(callContextData: any): number
 {
-    IC.postFork(DESTINATION_INSTANCE_NAME, "unused", 1, POST_TIMEOUT_IN_MS, callContextData);
+    const callID = IC.postFork(DESTINATION_INSTANCE_NAME, "unused", 1, POST_TIMEOUT_IN_MS, callContextData);
+    return (callID);
+}
+
+/** *Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start().* */
+export function unused_PostByImpulse(callContextData: any): void
+{
+    IC.postByImpulse(DESTINATION_INSTANCE_NAME, "unused", 1, POST_TIMEOUT_IN_MS, callContextData);
 }
 
 /**
